--- a/css/media.css
+++ b/css/media.css
@@ -679,6 +679,9 @@
 #activityImg5 {
   height: 93px !important;
 }
+#activityImg6 {
+  height: 97px !important;
+}
 #lastSmall {
   top: 44px !important;
 }
@@ -695,6 +698,12 @@
 .card:nth-of-type(3) {
    margin-left: 97px !important; 
  }
+}
+@media only screen and (width:1350px){
+  #activityImg5 {
+    height: 129px!important;
+   
+}
 }
 @media only screen and (min-width: 1024px) and (max-width: 1900px) {
   .container {
@@ -1266,7 +1275,7 @@
     width: 100%;
     border: 1px solid #ccc;
     position: relative;
-    top:26px;
+    top:36px;
   }
   
   .active {
